--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ a
     font-size: 0.9em;
     width: 95%;
   }
-  .screenshot, .cat, .cat2
+  .screenshot, .cat, .cat2, img
   {
     width: 90%;
   }
