--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ div
   width: 60%;
   //background-color: blue;
   line-height: 1.1;
-
 }
 
 .footer
@@ -123,4 +122,46 @@ a
     height: 800px;
   }  
   
+}
+
+ /* Style the button that is used to open and close the collapsible content */
+.collapsible {
+  background-color: black;
+  font-family: "Comic Sans MS", sans-serif;
+  font-weight: bold;
+  color: rgb(200, 255, 100);
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 24px;
+}
+
+/*https://www.w3schools.com/howto/howto_js_collapsible.asp*/
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .collapsible:hover {
+  background-color: rgb(10,10,10);
+}
+
+/* Style the collapsible content. Note: hidden by default */
+.collapsible-content 
+{
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: black;
+} 
+
+.collapsible:after {
+  content: '∨'; /* Unicode character for "plus" sign (+) */
+
+
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: '∧'; /* Unicode character for "minus" sign (-) */
 }
