--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ div
   width: 75%;
 }
 
-.paragraph
+.paragraph, .paragraph_row
 {
   background-color: var(--colour_front);
   margin-bottom: 12px;
@@ -85,7 +85,6 @@ div
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
 
 a
