--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ h3
   font-size: 1.2em;
 }
 
-.screenshot, .cat, .cat2
+.screenshot, .cat, .cat2, .notes_picture
 {
   border: 6px;
   border-style: solid;
@@ -163,6 +163,11 @@ h3
 }
 
 .cat
+{
+  width: 90%;
+}
+
+.notes_picture
 {
   width: 90%;
 }
@@ -198,7 +203,7 @@ h3
   display: none;
   overflow: hidden;
   background-color: var(--colour_para);
-  text-align: left;
+  text-align: center;
   margin-bottom: 12px;
   border-radius: 16px;  
 } 
