--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ a
 {
   height:  1.5em;
   padding: 0px;
+  padding-right: 8px;
   margin: 0px;
   /*Keep pressing the button until it gets it perfect, invert the inversion for white image: https://codepen.io/sosuke/pen/Pjoqqp*/
   filter: invert(30%) sepia(33%) saturate(495%) hue-rotate(337deg) brightness(103%) contrast(96%);
@@ -157,15 +158,15 @@ a
 }
 #icon_games:hover .link_icon_gif
 {
-  content: url(Assets/Gifs/navigation/icon_home.gif);
+  content: url(Assets/Gifs/navigation/icon_games.gif);
 }
 #icon_cat:hover .link_icon_gif
 {
-  content: url(Assets/Gifs/navigation/icon_home.gif);
+  content: url(Assets/Gifs/navigation/icon_cat.gif);
 }
 #icon_notes:hover .link_icon_gif
 {
-  content: url(Assets/Gifs/navigation/icon_home.gif);
+  content: url(Assets/Gifs/navigation/icon_notes.gif);
 }
 #icon_links:hover .link_icon_gif
 {
@@ -314,6 +315,10 @@ h3
   .content, #cat_gallery
   {
     width: 50%;
+  }
+  .nav
+  {
+    width: 20%;
   }
 }
 
