--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ a
 .link_button
 {
   font-size: 1em;
-  font-family: "Comic Sans MS", sans-serif;
+  font-family: "Comic Sans MS", "LDFComicSans", sans-serif;
   padding: 12px;
   background-color: var(--colour_para);
   margin: 2px;
@@ -171,7 +171,7 @@ a
 
 h1, h4, h5, h6
 {
-  font-family: "Comic Sans MS", sans-serif;
+  font-family: "Comic Sans MS", "LDFComicSans", sans-serif;
 }
 
 h1, h4
@@ -229,7 +229,7 @@ h3, h4
 .collapsible, .sorting, #sort_button {
   background-color: var(--colour_para);
   color: var(--colour_text);
-  font-family: "Comic Sans MS", sans-serif;
+  font-family: "Comic Sans MS", "LDFComicSans", sans-serif;
   font-weight: bold;
   cursor: pointer;
   padding: 12px;
