--- a/style.css
+++ b/style.css
@@ -169,6 +169,14 @@ a
   content: url(Assets/Gifs/navigation/icon_links.gif);
 }
 
+.invisible
+{
+  width: 0px;
+  height: 0px;
+  padding: 0px;
+  margin: 0px;
+}
+
 h1, h4, h5, h6
 {
   font-family: "Comic Sans MS", "LDFComicSans", sans-serif;
